# AMR-MuJoCo-Simulator

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  verify_service_matrix.sh  verify_service_target.sh
docker/: entrypoint.sh  healthcheck.py
src/mujoco_amr_sim/: README.md  package.xml  setup.cfg  setup.py
src/mujoco_amr_sim/config/: dock_station.json  ekf.yaml  nav2_params.yaml  slam_toolbox.yaml  waypoints.json
src/mujoco_amr_sim/docs/: mujoco_left_panel_guide.html  rl_training_pipeline.md
src/mujoco_amr_sim/launch/: full_stack.launch.py  monitoring.launch.py  sim.launch.py
src/mujoco_amr_sim/mujoco_amr_sim/: __init__.py  autonomy_manager.py  command_mux.py  config_utils.py  controllers.py  mjcf_builder.py  nav2_mission_bridge.py  rl_env.py  rl_policy_node.py  sim_node.py  train_rl.py
src/mujoco_amr_sim/resource/: mujoco_amr_sim
src/mujoco_amr_sim/rviz/: monitoring.rviz  monitoring_clean.rviz
src/mujoco_amr_sim/test/: test_config_utils.py  test_controllers.py
src/mujoco_amr_sim/urdf/: amr.urdf
tools/: check_service_target.py  print_service_route.py  snapshot_ros_status.py  snapshot_service_target.sh
